@@ -2,6 +2,7 @@
 
 2013-08-16 Davide
 	* Add emfrac to Jet
+	* Add mc truth particles for ttbar (implemented in WhTruthExtractor::ttbarMcAtNloParticles)
 
 2013-07-30 Steve
 	* Added jetPtCut arg to Meff methods
